Bug 1032644 - Fix some -Wunused warnings in non-unified OS X build. r=ehsan