toolkit/xre/nsSigHandlers.cpp
@@ -39,10 +39,6 @@
 static char _progname[1024] = "huh?";
 static unsigned int _gdb_sleep_duration = 300;
 
-// NB: keep me up to date with the same variable in
-// ipc/chromium/chrome/common/ipc_channel_posix.cc
-static const int kClientChannelFd = 3;
-
 #if defined(LINUX) && defined(DEBUG) && \
       (defined(__i386) || defined(__x86_64) || defined(PPC))
 #define CRAWL_STACK_ON_SIGSEGV
@@ -53,6 +49,10 @@ static const int kClientChannelFd = 3;
 #include <unistd.h>
 #include "nsISupportsUtils.h"
 #include "nsStackWalk.h"
+
+// NB: keep me up to date with the same variable in
+// ipc/chromium/chrome/common/ipc_channel_posix.cc
+static const int kClientChannelFd = 3;
 
 extern "C" {
 
